[package]
name = "rudis"
version = "0.1.0"
authors = ["TBD"]
edition = "2018"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test"
path = "src/bin/tst.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"
